download-8855007.out
  File "/projects/alar6830/SwiFT/download_WM.py", line 66
    !{aws_command}
    ^
SyntaxError: invalid syntax
